using custome theme

--- a/book.toml
+++ b/book.toml
@@ -6,6 +6,14 @@ language = "zh-CN"
 multilingual = false
 src = "src"
 
+[output.html]
+git-repository-url = "https://github.com/baddate/trilium-wiki"
+git-repository-icon = "fa-github"
+edit-url-template = "https://github.com/baddate/trilium-wiki/edit/master/{path}"
+additional-css = ["theme/catppuccin.css", "theme/catppuccin-highlight.css"]
+default-theme = "latte"
+preferred-dark-theme = "mocha"
+
 [output.html.fold]
 enable = true    # whether or not to enable section folding
 level = 1         # the depth to start folding
